force-app/main/default/objects/Subscription__c/fields/NextRenewal__c.field-meta.xml
<CustomField>
    <fullName>NextRenewal__c</fullName>
    <label>NextRenewal</label>
    <type>Date</type>
</CustomField>