force-app/main/default/objects/Subscription__c/fields/OverUsage__c.field-meta.xml
<CustomField>
    <fullName>OverUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverUsage</label>
    <type>Checkbox</type>
</CustomField>