force-app/main/default/objects/Subscription__c/fields/RenewedManually__c.field-meta.xml
<CustomField>
    <fullName>RenewedManually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RenewedManually</label>
    <type>Checkbox</type>
</CustomField>