force-app/main/default/objects/Subscription__c/fields/Sales_Review__c.field-meta.xml
<CustomField>
    <fullName>Sales_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales_Review</label>
    <type>Checkbox</type>
</CustomField>